--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -23,3 +23,86 @@ body > div{
 .layout-leave-to {
   filter: grayscale(1);
 }
+
+.d-flex {
+    display: flex !important;
+}
+.flex-column {
+    flex-direction: column !important;
+}
+.flex-items-center{
+    align-items: center !important;
+}
+.flex-justify-center {
+    justify-content: center !important;
+}
+
+.width-full{
+    width: 100%;
+}
+
+
+button {
+    cursor: pointer;
+    border-radius: 0;
+}
+.btn {
+    position: relative;
+    display: inline-block;
+    padding: 5px 16px;
+    font-size: 14px;
+    font-weight: var(--base-text-weight-medium, 500);
+    line-height: 20px;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    border: 1px solid;
+    border-radius: 6px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.btn {
+    color: #fff;
+    background-color: #2da44e;;
+    transition: 80ms cubic-bezier(0.33, 1, 0.68, 1);
+}
+.btn-large {
+    padding: 0.75em 1.5em;
+    font-size: inherit;
+    line-height: 1.5;
+    border-radius: 0.5em;
+}
+button, html [type=button], [type=reset], [type=submit] {
+    -webkit-appearance: button;
+}
+
+.mt-10 {
+    margin-top: var(--base-size-96, 96px) !important;
+}
+.p-5 {
+    padding: 5rem;
+}
+.d-block {
+    display: block !important;
+}
+.p-5 {
+    padding:32px !important;
+}
+.mb-2 {
+    margin-bottom: 8px !important;
+}
+.rounded-2 {
+    border-radius: 6px !important;
+}
+.border {
+    border: 1px solid black !important;
+}
+a {
+    color: black;
+    text-decoration: none;
+    &:hover{
+        text-decoration: none;
+    }
+}
